WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213303
REGRESSION (
r263098
): [Win10] http/tests/security/cross-origin-clean-css-resource-timing.html and http/tests/security/cross-origin-css-resource-timing.html are failing
https://bugs.webkit.org/show_bug.cgi?id=213303
Summary
REGRESSION (r263098): [Win10] http/tests/security/cross-origin-clean-css-reso...
Ryan Haddad
Reported
2020-06-17 09:54:04 PDT
http/tests/security/cross-origin-clean-css-resource-timing.html and http/tests/security/cross-origin-css-resource-timing.html are consistently failing on Win10 bots: --- /home/buildbot/worker/win10-release-tests/build/layout-test-results/http/tests/security/cross-origin-clean-css-resource-timing-expected.txt +++ /home/buildbot/worker/win10-release-tests/build/layout-test-results/http/tests/security/cross-origin-clean-css-resource-timing-actual.txt @@ -1,3 +1,4 @@ +CONSOLE MESSAGE: Unhandled Promise Rejection: Error: assert_false: image expected false got true -PASS CSS subresources of a clean stylesheet should populate resource timing entries, but not for imported stylesheets +FAIL CSS subresources of a clean stylesheet should populate resource timing entries, but not for imported stylesheets assert_false: image expected false got true --- /home/buildbot/worker/win10-release-tests/build/layout-test-results/http/tests/security/cross-origin-css-resource-timing-expected.txt +++ /home/buildbot/worker/win10-release-tests/build/layout-test-results/http/tests/security/cross-origin-css-resource-timing-actual.txt @@ -1,3 +1,5 @@ +CONSOLE MESSAGE: Unhandled Promise Rejection: Error: assert_false: import expected false got true +Test -PASS CSS subresources of an opaque stylesheet should not populate resource timing entries +FAIL CSS subresources of an opaque stylesheet should not populate resource timing entries assert_false: import expected false got true
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&test=http%2Ftests%2Fsecurity%2Fcross-origin-clean-css-resource-timing.html&test=http%2Ftests%2Fsecurity%2Fcross-origin-css-resource-timing.html
Attachments
Patch
(3.13 KB, patch)
2020-06-18 04:55 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-06-17 09:54:24 PDT
<
rdar://problem/64452203
>
Ryan Haddad
Comment 2
2020-06-17 09:54:55 PDT
Test history suggests that this regressed with
https://trac.webkit.org/changeset/263098/webkit
Ryan Haddad
Comment 3
2020-06-17 10:11:13 PDT
Youenn says he will look at this tomorrow.
Ryan Haddad
Comment 4
2020-06-17 10:11:35 PDT
Marked tests as failing to keep EWS moving quickly in the interim.
Ryan Haddad
Comment 5
2020-06-17 10:12:04 PDT
(In reply to Ryan Haddad from
comment #4
)
> Marked tests as failing to keep EWS moving quickly in the interim.
http://trac.webkit.org/r263162
youenn fablet
Comment 6
2020-06-18 04:55:13 PDT
Created
attachment 402199
[details]
Patch
youenn fablet
Comment 7
2020-06-18 08:51:12 PDT
Test seem to pass in windows by reverting a change that was not mandatory for
https://trac.webkit.org/changeset/263098/webkit
. I am not quite sure why and we should probably get back to it at some point.
Alex Christensen
Comment 8
2020-06-18 09:52:17 PDT
Comment on
attachment 402199
[details]
Patch If this fixes it, I don't oppose. Definitely strange.
EWS
Comment 9
2020-06-18 10:28:44 PDT
Committed
r263218
: <
https://trac.webkit.org/changeset/263218
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 402199
[details]
.
Darin Adler
Comment 10
2020-06-18 10:31:03 PDT
Comment on
attachment 402199
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=402199&action=review
> Source/WebCore/loader/ResourceLoaderOptions.h:145 > -enum class LoadedFromOpaqueSource : bool { > - No, > - Yes > +enum class LoadedFromOpaqueSource : uint8_t { > + Yes, > + No > };
If this value is sent cross process with Encoder/Decoder, changing from bool to uint8_t might require specializing EnumTraits. So it might be slightly trickier than just reverting. I see no test failures, I guess this is not done with this enumeration?
youenn fablet
Comment 11
2020-06-19 00:44:01 PDT
(In reply to Alex Christensen from
comment #8
)
> Comment on
attachment 402199
[details]
> Patch > > If this fixes it, I don't oppose. Definitely strange.
This fixes it according the bots.
> If this value is sent cross process with Encoder/Decoder, changing from bool > to uint8_t might require specializing EnumTraits. So it might be slightly > trickier than just reverting. I see no test failures, I guess this is not > done with this enumeration?
Issue is WK1 and I do not think this is encoder/decoder. Maybe this is Windows compiler specific.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug