REGRESSION (r263098): [Win10] http/tests/security/cross-origin-clean-css-resource-timing.html and http/tests/security/cross-origin-css-resource-timing.html are failing https://bugs.webkit.org/show_bug.cgi?id=213303 <rdar://problem/64452203>

Reviewed by Alex Christensen.

Source/WebCore:

Covered by existing tests.

* loader/ResourceLoaderOptions.h:
Reverting part of https://trac.webkit.org/changeset/263098/webkit that might have broken win10 bots.

LayoutTests:

* platform/win/TestExpectations:


Canonical link: https://commits.webkit.org/226137@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263218 268f45cc-cd09-0410-ab3c-d52691b4dbfc